pod-security-vpol/baseline/disallow-host-path/e2e/policy-assert.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: disallow-host-path
spec:
  validationActions: [Audit]
status:
  conditionStatus:
    ready: true
