pod-security-vpol/baseline/disallow-host-path/e2e/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-host-path-policy
spec:
  steps:
  - name: test-disallow-host-path
    try:
    - apply:
        file: ../disallow-host-path.yaml
    - assert:
        file: policy-assert.yaml
    - patch:
        resource:
          apiVersion: policies.kyverno.io/v1alpha1
          kind: ValidatingPolicy
          metadata:
            name: disallow-host-path
          spec:
            validationActions: [Deny]
    - assert:
        file: enforce-policy-assert.yaml
    - apply:
        file: good-resource.yaml
    - sleep:
        duration: 20s
    - apply:
        expect:
        - check:
            ($error != null): true
        file: bad-resource.yaml
